--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,8 +13,65 @@
     tools:context="com.example.kosst.ebooksstore.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="40dp"
+        android:orientation="vertical"
+        android:background="@color/pishwaisser">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="@string/buton_add_book"
+            android:id="@+id/buton_add_book"
+            android:layout_marginTop="@dimen/margin_buttons"
+            android:layout_marginBottom="@dimen/margin_buttons"
+            android:background="@drawable/buttondrawable"
+            />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="@string/buton_remove_book"
+            android:id="@+id/buton_remove_book"
+            android:layout_marginTop="@dimen/margin_buttons"
+            android:layout_marginBottom="@dimen/margin_buttons"
+            android:background="@drawable/buttondrawable"
+            />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="@string/buton_list_book"
+            android:id="@+id/buton_list_books"
+            android:layout_marginTop="@dimen/margin_buttons"
+            android:layout_marginBottom="@dimen/margin_buttons"
+            android:background="@drawable/buttondrawable"
+            />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="@string/buton_update_pret"
+            android:id="@+id/update_price"
+            android:layout_marginTop="@dimen/margin_buttons"
+            android:layout_marginBottom="@dimen/margin_buttons"
+            android:background="@drawable/buttondrawable"
+            />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="@string/buton_update_rating"
+            android:id="@+id/update_rating"
+            android:layout_marginTop="@dimen/margin_buttons"
+            android:layout_marginBottom="@dimen/margin_buttons"
+            android:background="@drawable/buttondrawable"
+            />
+
+
+
+    </LinearLayout>
 </RelativeLayout>
