--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="margin_buttons">5dp</dimen>
+    <dimen name="row_height">30dp</dimen>
+    <dimen name="small_margin">5dp</dimen>
 </resources>
