--- a/app/src/main/res/layout/content_list_books.xml
+++ b/app/src/main/res/layout/content_list_books.xml
@@ -13,4 +13,11 @@
     tools:context="com.example.kosst.ebooksstore.ListBooksActivity"
     tools:showIn="@layout/activity_list_books">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerview1"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+
 </RelativeLayout>
