--- a/app/src/main/res/layout/recyclerview_item_remove.xml
+++ b/app/src/main/res/layout/recyclerview_item_remove.xml
@@ -26,7 +26,7 @@
 
         <TextView
             android:id="@+id/item_categorie_carte"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
             android:layout_marginBottom="7dp"
@@ -35,16 +35,14 @@
             android:textSize="20dp"
             android:textStyle="bold"
             android:textColor="@color/colorPrimary"
-            android:width="0dp"
             android:layout_weight="2"
             />
 
         <Button
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Remove book"
             android:id="@+id/remove_book_button"
-            android:width="0dp"
             android:layout_weight="1"/>
 
 
