--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -21,7 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_update" />
+    <include layout="@layout/content_update_price" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
